--- a/web3_react-native_to_ganache/android/app/src/main/AndroidManifest.xml
+++ b/web3_react-native_to_ganache/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
   package="com.web3_test">
 
     <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
       android:name=".MainApplication"
