--- a/web3_react-native_to_ganache/ios/Podfile
+++ b/web3_react-native_to_ganache/ios/Podfile
@@ -8,6 +8,10 @@ target 'web3_test' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
+
   target 'web3_testTests' do
     inherit! :complete
     # Pods for testing
