--- a/web3_react-native_to_ganache/package.json
+++ b/web3_react-native_to_ganache/package.json
@@ -30,9 +30,12 @@
     "querystring-es3": "^0.2.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-camera": "^3.37.0",
     "react-native-crypto": "^2.2.0",
     "react-native-level-fs": "^3.0.0",
     "react-native-os": "^1.0.1",
+    "react-native-permissions": "^2.2.0",
+    "react-native-qrcode-scanner": "^1.4.1",
     "react-native-randombytes": "^3.5.3",
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "^2.1.0",
