--- a/web3_react-native_to_ganache/package.json
+++ b/web3_react-native_to_ganache/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.7.4",
     "@tradle/react-native-http": "^2.0.0",
     "assert": "^1.1.1",
     "base-64": "^0.1.0",
@@ -32,13 +34,18 @@
     "react-native": "0.63.2",
     "react-native-camera": "^3.37.0",
     "react-native-crypto": "^2.2.0",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-level-fs": "^3.0.0",
     "react-native-os": "^1.0.1",
     "react-native-permissions": "^2.2.0",
     "react-native-qrcode-scanner": "^1.4.1",
     "react-native-randombytes": "^3.5.3",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.11.0",
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "^2.1.0",
+    "react-navigation": "^4.4.1",
+    "react-navigation-stack": "^2.8.3",
     "readable-stream": "^1.0.33",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
