--- a/web3_react-native_to_ganache/package.json
+++ b/web3_react-native_to_ganache/package.json
@@ -15,6 +15,7 @@
     "@tradle/react-native-http": "^2.0.0",
     "assert": "^1.1.1",
     "base-64": "^0.1.0",
+    "big-integer": "^1.6.48",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.1",
     "console-browserify": "^1.1.0",
@@ -25,6 +26,8 @@
     "events": "^1.0.0",
     "https-browserify": "0.0.1",
     "inherits": "^2.0.1",
+    "ipfs-api": "^26.1.2",
+    "ipfs-mini": "^1.1.5",
     "node-libs-browser": "^2.2.1",
     "path-browserify": "0.0.0",
     "process": "^0.11.0",
